# serializer version: 1
# name: test_tab_template_renders_explicit_mail_pages[mail.claim.alliance]
  dict({
    'enabled': True,
    'name': 'Mail Alliance: Claim Rewards',
    'node': 'mail.alliance',
    'priority': 80000,
    'steps': list([
      dict({
        'action': 'text',
        'expected': list([
          'Read & Claim All',
          'Claim All',
          'Прочитать все',
        ]),
        'max': 2,
        'retry': dict({
          'attempts': 3,
          'interval': '400ms',
        }),
        'steps': list([
          dict({
            'click': 'mail.claim.all',
          }),
          dict({
            'wait': '1.5s',
          }),
          dict({
            'expected': list([
              'tap anywhere',
              'нажмите в любом месте',
            ]),
            'max': 3,
            'steps': list([
              dict({
                'click': 'button.tap_anywhere_to_exit',
              }),
              dict({
                'wait': '0.5s',
              }),
            ]),
            'threshold': 0.7,
            'while_match': 'button.tap_anywhere_to_exit',
          }),
        ]),
        'threshold': 0.7,
        'while_match': 'mail.claim.all',
      }),
    ]),
  })
# ---
# name: test_tab_template_renders_explicit_mail_pages[mail.claim.reports]
  dict({
    'enabled': True,
    'name': 'Mail Reports: Claim Rewards',
    'node': 'mail.reports',
    'priority': 80000,
    'steps': list([
      dict({
        'action': 'text',
        'expected': list([
          'Read & Claim All',
          'Claim All',
          'Прочитать все',
        ]),
        'max': 2,
        'retry': dict({
          'attempts': 3,
          'interval': '400ms',
        }),
        'steps': list([
          dict({
            'click': 'mail.claim.all',
          }),
          dict({
            'wait': '1.5s',
          }),
          dict({
            'expected': list([
              'tap anywhere',
              'нажмите в любом месте',
            ]),
            'max': 3,
            'steps': list([
              dict({
                'click': 'button.tap_anywhere_to_exit',
              }),
              dict({
                'wait': '0.5s',
              }),
            ]),
            'threshold': 0.7,
            'while_match': 'button.tap_anywhere_to_exit',
          }),
        ]),
        'threshold': 0.7,
        'while_match': 'mail.claim.all',
      }),
    ]),
  })
# ---
# name: test_tab_template_renders_explicit_mail_pages[mail.claim.starred]
  dict({
    'enabled': True,
    'name': 'Mail Starred: Claim Rewards',
    'node': 'mail.starred',
    'priority': 80000,
    'steps': list([
      dict({
        'action': 'text',
        'expected': list([
          'Read & Claim All',
          'Claim All',
          'Прочитать все',
        ]),
        'max': 2,
        'retry': dict({
          'attempts': 3,
          'interval': '400ms',
        }),
        'steps': list([
          dict({
            'click': 'mail.claim.all',
          }),
          dict({
            'wait': '1.5s',
          }),
          dict({
            'expected': list([
              'tap anywhere',
              'нажмите в любом месте',
            ]),
            'max': 3,
            'steps': list([
              dict({
                'click': 'button.tap_anywhere_to_exit',
              }),
              dict({
                'wait': '0.5s',
              }),
            ]),
            'threshold': 0.7,
            'while_match': 'button.tap_anywhere_to_exit',
          }),
        ]),
        'threshold': 0.7,
        'while_match': 'mail.claim.all',
      }),
    ]),
  })
# ---
# name: test_tab_template_renders_explicit_mail_pages[mail.claim.system]
  dict({
    'enabled': True,
    'name': 'Mail System: Claim Rewards',
    'node': 'mail.system',
    'priority': 80000,
    'steps': list([
      dict({
        'action': 'text',
        'expected': list([
          'Read & Claim All',
          'Claim All',
          'Прочитать все',
        ]),
        'max': 2,
        'retry': dict({
          'attempts': 3,
          'interval': '400ms',
        }),
        'steps': list([
          dict({
            'click': 'mail.claim.all',
          }),
          dict({
            'wait': '1.5s',
          }),
          dict({
            'expected': list([
              'tap anywhere',
              'нажмите в любом месте',
            ]),
            'max': 3,
            'steps': list([
              dict({
                'click': 'button.tap_anywhere_to_exit',
              }),
              dict({
                'wait': '0.5s',
              }),
            ]),
            'threshold': 0.7,
            'while_match': 'button.tap_anywhere_to_exit',
          }),
        ]),
        'threshold': 0.7,
        'while_match': 'mail.claim.all',
      }),
    ]),
  })
# ---
# name: test_tab_template_renders_explicit_mail_pages[mail.claim.wars]
  dict({
    'enabled': True,
    'name': 'Mail Wars: Claim Rewards',
    'node': 'mail.wars',
    'priority': 80000,
    'steps': list([
      dict({
        'action': 'text',
        'expected': list([
          'Read & Claim All',
          'Claim All',
          'Прочитать все',
        ]),
        'max': 2,
        'retry': dict({
          'attempts': 3,
          'interval': '400ms',
        }),
        'steps': list([
          dict({
            'click': 'mail.claim.all',
          }),
          dict({
            'wait': '1.5s',
          }),
          dict({
            'expected': list([
              'tap anywhere',
              'нажмите в любом месте',
            ]),
            'max': 3,
            'steps': list([
              dict({
                'click': 'button.tap_anywhere_to_exit',
              }),
              dict({
                'wait': '0.5s',
              }),
            ]),
            'threshold': 0.7,
            'while_match': 'button.tap_anywhere_to_exit',
          }),
        ]),
        'threshold': 0.7,
        'while_match': 'mail.claim.all',
      }),
    ]),
  })
# ---
